Fix rare out-of-bounds list indexing when inserting launchers.

BUG:324218